# pi-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGESLOG.md  Cargo.toml  ROADMAP.md  TODO.md
crates/pi-agent-core/: CHANGELOG.md  CHANGESLOG.md  Cargo.toml
crates/pi-agent-core/examples/: loop_example.rs
crates/pi-agent-core/src/: agent.rs  agent_loop.rs  ai_runtime.rs  api.rs  branch_summary.rs  convert.rs  env.rs  errors.rs  flow.rs  harness.rs  hooks.rs  lib.rs  proxy.rs  queues.rs  shell_output.rs  transcript.rs  truncate.rs  types.rs
crates/pi-agent-core/src/agent/: mod.rs  provider.rs  queue.rs  runtime.rs
crates/pi-agent-core/src/agent_turn_flow/: context.rs  mod.rs  nodes.rs  runtime.rs
crates/pi-agent-core/src/compaction/: branch.rs  branch_error.rs  error.rs  estimate.rs  mod.rs  prepare.rs  session.rs  summarize.rs
crates/pi-agent-core/src/context/: assembly.rs  conversion.rs  memory.rs  mod.rs
crates/pi-agent-core/src/execution/: capture.rs  environment.rs  error.rs  filesystem.rs  mod.rs  shell.rs
crates/pi-agent-core/src/flow/: action.rs  error.rs  graph.rs  mod.rs  node.rs
crates/pi-agent-core/src/hooks/: agent.rs  mod.rs  provider.rs  tool.rs
crates/pi-agent-core/src/loop_runtime/: context.rs  mod.rs  tools.rs
crates/pi-agent-core/src/resources/: frontmatter.rs  mod.rs  prompt_templates.rs  skills.rs  system_prompt.rs  types.rs
crates/pi-agent-core/src/session/: context.rs  id.rs  jsonl.rs  memory.rs  migrations.rs  mod.rs  repo.rs  types.rs
crates/pi-agent-core/src/session_context/: context.rs  error.rs  memory.rs  mod.rs
crates/pi-agent-core/src/testing/: environment.rs  error.rs  harness.rs  mod.rs  proxy.rs
crates/pi-agent-core/src/transcript/: id.rs  mod.rs  types.rs
crates/pi-agent-core/tests/: agent.rs  agent_hydration.rs  agent_loop.rs  agent_runtime_boundary.rs  agent_turn_flow.rs  ai_runtime_boundary.rs  api_boundary_guards.rs  api_contract.rs  compaction.rs  deterministic_boundary.rs  execution.rs  flow.rs  harness_subscribe.rs  harness_types.rs  hooks.rs  legacy_session_boundary.rs  m9_branch_proxy_shell.rs  m9_harness.rs  parallel_tools.rs  provider_guard.rs  public_api.rs  queues_thinking.rs  resources.rs  session_context.rs  session_harness_entries.rs  session_jsonl.rs  session_repo.rs  session_wire.rs  sourced_resources.rs  tool_boundary_guards.rs  tool_hooks.rs  transcript.rs  transcript_boundary.rs
crates/pi-agent-core/tests/agent/: hydration.rs  loop_runtime.rs  queues_thinking.rs  turn_flow.rs
crates/pi-agent-core/tests/api_contract/: ai_runtime_boundary.rs  api_boundary_guards.rs  deterministic_boundary.rs  legacy_session_boundary.rs  public_api.rs  tool_boundary_guards.rs  transcript_boundary.rs
crates/pi-agent-core/tests/common/: mod.rs
crates/pi-agent-core/tests/execution/: branch_proxy_shell.rs
crates/pi-agent-core/tests/resources/: basic.rs  sourced.rs
crates/pi-agent-core/tests/tool_hooks/: harness_runtime.rs  harness_subscribe.rs  hooks.rs  parallel_tools.rs  provider_guard.rs
crates/pi-agent-core/tests/transcript/: harness_entries.rs  wire.rs
crates/pi-ai/: CHANGELOG.md  CHANGESLOG.md  Cargo.toml
crates/pi-ai/examples/: faux_stream.rs
crates/pi-ai/src/: api.rs  client.rs  compat.rs  images.rs  lib.rs  models.rs  models_generated.json  models_generated.rs  registry.rs  stream.rs  types.rs
crates/pi-ai/src/compat/: anthropic.rs  mod.rs  openai_completions.rs  (+1 more)
crates/pi-ai/tests/: anthropic_mapping.rs  api_boundary_guards.rs  azure_openai_responses.rs  bedrock.rs  cost.rs  deepseek.rs  env_keys.rs  faux.rs  google_generative_ai.rs  http_retry.rs  images.rs  m8_utilities.rs  mistral.rs  model_registry.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  provider_registry_boundary_guards.rs  public_api.rs  request_building.rs  serde_roundtrip.rs  support_guards.rs  transport_contract.rs
crates/pi-ai/tools/: generate_models.cjs
crates/pi-coding-agent/: CHANGELOG.md  CHANGESLOG.md  Cargo.toml
crates/pi-coding-agent/examples/: manual_test.rs
crates/pi-coding-agent/src/: args.rs  authorization.rs  error.rs  input.rs  lib.rs  list_models.rs  main.rs  models.rs  print_mode.rs  prompt_options.rs  request.rs  resources.rs  runtime.rs  session.rs
crates/pi-coding-agent/tests/: agent_invocation.rs  agent_profile_runtime.rs  agent_profile_session.rs  agent_team_flow.rs  api_boundary_guards.rs  api_contract.rs  args.rs  bin_startup.rs  boundaries.rs  capability_plugin.rs  cli.rs  config_request.rs  config_wiring.rs  delegation_execution.rs  deterministic_boundary.rs  event_boundary_guards.rs  events_snapshot.rs  file_mutation_queue.rs  harness_args.rs  harness_print_mode.rs  interactive_abort.rs  interactive_args.rs  interactive_event_bridge.rs  interactive_mode.rs  interactive_sessions.rs  interactive_transcript.rs  json_mode.rs  m10_resources_input.rs  operation.rs  operation_association.rs  plugin_ui_boundary_guards.rs  print_json.rs  print_mode.rs  product_event_contract.rs  product_runtime_boundary_guards.rs  profile_registry.rs  protocol_args.rs  protocol_events.rs  protocol_jsonl.rs  protocol_sessions.rs  (+26 more)
crates/pi-tui/: CHANGELOG.md  CHANGESLOG.md  Cargo.toml
crates/pi-tui/examples/: render_once.rs
crates/pi-tui/src/: api.rs  autocomplete.rs  component.rs  cursor.rs  fuzzy.rs  lib.rs  overlay.rs  runtime.rs  style.rs  terminal.rs  terminal_colors.rs  terminal_image.rs  theme.rs  tui.rs  undo_stack.rs  virtual_terminal.rs
crates/pi-tui/tests/: api_boundary_guards.rs  api_contract.rs  autocomplete.rs  autocomplete_fuzzy.rs  component_downcast.rs  components.rs  cursor.rs  deterministic_boundary.rs  editing.rs  editor_component.rs  fuzzy.rs  image_component.rs  input.rs  input_component.rs  input_stack.rs  keybindings.rs  loader.rs  markdown.rs  markdown_image.rs  overlay.rs  public_api.rs  render.rs  select_list.rs  selector_dialog.rs  settings_list.rs  style.rs  terminal.rs  terminal_image.rs  terminal_lifecycle.rs  theme.rs  tui_render.rs  tui_runtime.rs  ui_boundary_guards.rs  width.rs  wrap_ansi.rs
tools/architecture-prototypes/wasmtime-harness/: Cargo.toml
(+1187 files in other folders)
