[package]
name = "pi-agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pi-ai = { path = "../pi-ai" }
futures = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serde_yaml = "0.9"
ignore = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
