[package]
name = "pi-agent-core"
version.workspace = true
edition = "2024"

[features]
default = []
test-support = ["pi-ai/test-support"]

[dependencies]
pi-ai = { path = "../pi-ai" }
futures = "0.3"
tokio-util = "0.7"
tokio = { version = "1", features = ["macros"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serde_yaml = "0.9"
ignore = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v7"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
pi-ai = { path = "../pi-ai", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }

[[example]]
name = "loop_example"
required-features = ["test-support"]

[[test]]
name = "agent"
required-features = ["test-support"]

[[test]]
name = "api_contract"
required-features = ["test-support"]

[[test]]
name = "execution"
required-features = ["test-support"]

[[test]]
name = "flow"
required-features = ["test-support"]

[[test]]
name = "tool_hooks"
required-features = ["test-support"]
