[package]
name = "pi-coding-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
globset = "0.4"
ignore = "0.4"
pi-agent-core = { path = "../pi-agent-core" }
pi-ai = { path = "../pi-ai" }
pi-tui = { path = "../pi-tui" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "io-util", "io-std", "sync"] }
unicode-normalization = "0.1"

[dev-dependencies]
async-stream = "0.3"
tempfile = "3"
