[package]
name = "pi-coding-agent"
version.workspace = true
edition = "2024"

[features]
default = []
test-harness = []
test-support = ["pi-agent-core/test-support", "pi-ai/test-support", "pi-tui/test-support"]

[dependencies]
dirs = "6"
base64 = "0.22"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
notify = "7"
pi-agent-core = { path = "../pi-agent-core" }
pi-ai = { path = "../pi-ai" }
pi-tui = { path = "../pi-tui" }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "parsing", "regex-fancy"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "io-util", "io-std", "sync", "test-util"] }
tokio-util = "0.7"
toml = "0.8"
unicode-normalization = "0.1"
wasmtime = { version = "=46.0.1", default-features = false, features = [
    "anyhow",
    "async",
    "component-model",
    "component-model-async",
    "cranelift",
    "runtime",
    "std",
] }

[dev-dependencies]
async-stream = "0.3"
pi-agent-core = { path = "../pi-agent-core", features = ["test-support"] }
pi-ai = { path = "../pi-ai", features = ["test-support"] }
pi-tui = { path = "../pi-tui", features = ["test-support"] }
tempfile = "3"

[[example]]
name = "manual_test"
required-features = ["test-support"]
