[package]
name = "pi-rust-wasmtime-architecture-prototype"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wasmtime = { version = "=46.0.1", default-features = false, features = [
    "anyhow",
    "async",
    "cranelift",
    "runtime",
    "std",
    "wat",
] }
